validatons and list alignment fixed

--- a/packages/business-finance/page-components/OverHeads/Expenses/AddExpenseModal/UploadInvoice/styles.module.css
+++ b/packages/business-finance/page-components/OverHeads/Expenses/AddExpenseModal/UploadInvoice/styles.module.css
@@ -19,8 +19,10 @@
 
 .confirm {
 	display: flex;
-	justify-content: flex-end;
-	margin: 64px 20px 0 0;
+	align-items: center;
+	font-size: 12px;
+	color: #F68B21;
+	margin:12px 20px 0 8px;
 }
 
 .select {
